MB-18956: Fix data race with ActiveStream::takeoverStart

As reported by ThreadSanitizer:

    WARNING: ThreadSanitizer: data race (pid=64147)
    Read of size 4 at 0x7d480000b9d4 by thread T11 (mutexes: write M13543, read M17306):
    #0 ActiveStream::addStats(void (*)(char const*, unsigned short, char const*, unsigned int, void const*), void const*) ep-engine/src/dcp/stream.cc:545 (ep.so+0x000000076f03)
    #1 DcpProducer::addStats(void (*)(char const*, unsigned short, char const*, unsigned int, void const*), void const*) ep-engine/src/dcp/producer.cc:710 (ep.so+0x00000006b1d7)
    #2 ConnStatBuilder::operator()(SingleThreadedRCPtr<ConnHandler>&) ep-engine/src/ep_engine.cc:3880 (ep.so+0x0000000e58d1)
    #3 EventuallyPersistentEngine::doDcpStats(void const*, void (*)(char const*, unsigned short, char const*, unsigned int, void const*)) ep-engine/src/ep_engine.cc:4137 (ep.so+0x0000000c518a)
    ...
    Previous write of size 4 at 0x7d480000b9d4 by main thread (mutexes: write M18112):
    #0 ActiveStream::transitionState(stream_state_t) ep-engine/src/dcp/stream.cc:1033 (ep.so+0x000000073888)
    #1 ActiveStream::setVBucketStateAckRecieved() ep-engine/src/dcp/stream.cc:394 (ep.so+0x000000076185)
    #2 DcpProducer::handleResponse(protocol_binary_response_header*) ep-engine/src/dcp/producer.cc:608 (ep.so+0x00000006a3c3)

Change-Id: Idfd91e996aa94be0dab3e8137e189e2f5435be41
Reviewed-on: http://review.couchbase.org/62167
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Will Gardner <will.gardner@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>